Add sgx ssl certificates dir parameter to docker-compose template

--- a/ansible/roles/sources/templates/docker-compose.yml.j2
+++ b/ansible/roles/sources/templates/docker-compose.yml.j2
@@ -20,6 +20,7 @@ services:
       dockerfile: Dockerfile
     environment:
       SGX_SERVER_URL: ${SGX_SERVER_URL} 
+      SGX_CERTIFICATES_DIR_NAME: ${SGX_CERTIFICATES_DIR_NAME}
       ENDPOINT: ${ENDPOINT}
       FLASK_SECRET_KEY: ${FLASK_SECRET_KEY} # todo: use different flask secret key!
       FLASK_APP_PORT: 3008
@@ -41,6 +42,7 @@ services:
     environment:
       TM_URL: http://transaction-manager:3008
       SGX_SERVER_URL: ${SGX_SERVER_URL}
+      SGX_CERTIFICATES_DIR_NAME: ${SGX_CERTIFICATES_DIR_NAME}
       ENDPOINT: ${ENDPOINT}
       IMA_ENDPOINT: ${IMA_ENDPOINT}
       DB_USER: ${DB_USER}
