--- a/ansible/roles/sources/templates/docker-compose.yml.j2
+++ b/ansible/roles/sources/templates/docker-compose.yml.j2
@@ -18,19 +18,22 @@ services:
     build:
       context: "{{ base_path }}/transaction-manager"
       dockerfile: Dockerfile
+    network_mode: host
+    tty: true
     environment:
-      SGX_SERVER_URL: ${SGX_SERVER_URL} 
+      SGX_SERVER_URL: ${SGX_SERVER_URL}
       SGX_CERTIFICATES_DIR_NAME: ${SGX_CERTIFICATES_DIR_NAME}
       ENDPOINT: ${ENDPOINT}
       FLASK_SECRET_KEY: ${FLASK_SECRET_KEY} # todo: use different flask secret key!
       FLASK_APP_PORT: 3008
-      FLASK_APP_HOST: "0.0.0.0" # todo: change to localhost
+      FLASK_APP_HOST: "127.0.0.1"
       FLASK_DEBUG_MODE: "False"
       SKALE_DIR_HOST: ${SKALE_DIR}
     volumes:
       - ${SKALE_DIR}:/skale_vol
       - ${SKALE_DIR}/node_data:/skale_node_data
-    restart: unless-stopped
+    ports:
+      - 3008:3008
   admin:
     <<: *skale_base
     container_name: skale_admin
@@ -38,9 +41,13 @@ services:
     build:
       context: "{{ base_path }}/skale-admin"
       dockerfile: Dockerfile
+    network_mode: host
     tty: true
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     environment:
-      TM_URL: http://transaction-manager:3008
+      TM_URL: http://127.0.0.1:3008
       SGX_SERVER_URL: ${SGX_SERVER_URL}
       SGX_CERTIFICATES_DIR_NAME: ${SGX_CERTIFICATES_DIR_NAME}
       ENDPOINT: ${ENDPOINT}
@@ -53,7 +60,7 @@ services:
       DOCKER_PASSWORD: ${DOCKER_PASSWORD}
       FLASK_SECRET_KEY: ${FLASK_SECRET_KEY}
       FLASK_APP_PORT: 3007
-      FLASK_APP_HOST: "0.0.0.0"
+      FLASK_APP_HOST: "127.0.0.1"
       FLASK_DEBUG_MODE: "False"
       SKALE_DIR_HOST: ${SKALE_DIR}
     ports:
@@ -64,14 +71,11 @@ services:
       - ${SKALE_DIR}/node_data:/skale_node_data
     depends_on:
       - mysql
-    links:
-      - mysql:mysql
-      - transaction-manager:transaction-manager
-    restart: unless-stopped
   mysql:
     <<: *skale_base
     container_name: skale_mysql
     image: mysql/mysql-server:5.7
+    network_mode: host
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - ~/.skale/node_data/mysql-data:/var/lib/mysql
@@ -83,79 +87,78 @@ services:
     ports:
       - ${DB_PORT}:3306
 
-#  sla:
-#    <<: *skale_base
-#    container_name: skale_sla
-#    image: skalelabshub/sla-agent:0.4.0-beta.0
-#    environment:
-#      TM_URL: http://transaction-manager:3008
-#      ENDPOINT: ${ENDPOINT}
-#      DB_USER: ${DB_USER}
-#      DB_PASSWORD: ${DB_PASSWORD}
-#      DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-#      DB_PORT: ${DB_PORT}
-#    volumes:
-#      - ${SKALE_DIR}:/skale_vol
-#      - ${SKALE_DIR}/node_data:/skale_node_data
-#    depends_on:
-#      - mysql
-#    links:
-#      - mysql:mysql
-#
-#  bounty:
-#    <<: *skale_base
-#    container_name: skale_bounty
-#    image: skalelabshub/bounty-agent:0.4.0-beta.0
-#    environment:
-#      TM_URL: http://transaction-manager:3008
-#      ENDPOINT: ${ENDPOINT}
-#      DB_USER: ${DB_USER}
-#      DB_PASSWORD: ${DB_PASSWORD}
-#      DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-#      DB_PORT: ${DB_PORT}
-#    volumes:
-#      - ${SKALE_DIR}:/skale_vol
-#      - ${SKALE_DIR}/node_data:/skale_node_data
-#    depends_on:
-#      - mysql
-#    links:
-#      - mysql:mysql
-#
-#
-#  advisor:
-#    <<: *skale_base
-#    container_name: monitor_cadvisor
-#    image: google/cadvisor:latest
-#    volumes:
-#      - /:/rootfs:ro
-#      - /var/run:/var/run:ro
-#      - /sys:/sys:ro
-#      - /var/lib/docker/:/var/lib/docker:ro
-#      - /dev/disk/:/dev/disk:ro
-#    ports:
-#      - "8080:8080"
-#
-#  node-exporter:
-#    <<: *skale_base
-#    container_name: monitor_node_exporter
-#    image: quay.io/prometheus/node-exporter
-#    restart: unless-stopped
-#    volumes:
-#      - /proc:/host/proc:ro
-#      - /sys:/host/sys:ro
-#      - /:/rootfs:ro
-#    command:
-#      - '--path.procfs=/host/proc'
-#      - '--path.rootfs=/rootfs'
-#      - '--path.sysfs=/host/sys'
-#      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
-#    network_mode: host
+  sla:
+    <<: *skale_base
+    container_name: skale_sla
+    image: skalenetwork/sla-agent:0.4.1-beta.2
+    network_mode: host
+    environment:
+      TM_URL: http://transaction-manager:3008
+      ENDPOINT: ${ENDPOINT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      DB_PORT: ${DB_PORT}
+    volumes:
+      - ${SKALE_DIR}:/skale_vol
+      - ${SKALE_DIR}/node_data:/skale_node_data
+    depends_on:
+      - mysql
+
+  bounty:
+    <<: *skale_base
+    container_name: skale_bounty
+    image: skalenetwork/bounty-agent:0.4.1-beta.2
+    network_mode: host
+    environment:
+      TM_URL: http://transaction-manager:3008
+      ENDPOINT: ${ENDPOINT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      DB_PORT: ${DB_PORT}
+    volumes:
+      - ${SKALE_DIR}:/skale_vol
+      - ${SKALE_DIR}/node_data:/skale_node_data
+    depends_on:
+      - mysql
+
+
+  advisor:
+    <<: *skale_base
+    container_name: monitor_cadvisor
+    image: google/cadvisor:latest
+    network_mode: host
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+    ports:
+      - "8080:8080"
+
+  node-exporter:
+    <<: *skale_base
+    container_name: monitor_node_exporter
+    image: quay.io/prometheus/node-exporter
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+    network_mode: host
 
   filebeat:
     <<: *skale_base
     container_name: monitor_filebeat
     user: root
     image: docker.elastic.co/beats/filebeat:7.3.1
+    network_mode: host
     environment:
       FILEBEAT_HOST: ${FILEBEAT_HOST}
     volumes:
