--- a/ansible/roles/sources/templates/docker-compose.yml.j2
+++ b/ansible/roles/sources/templates/docker-compose.yml.j2
@@ -34,7 +34,8 @@ services:
       - ${SKALE_DIR}/node_data:/skale_node_data
     ports:
       - 3008:3008
-  admin:
+
+  skale-admin:
     <<: *skale_base
     container_name: skale_admin
     image: "skale-admin:${TAG:-latest}"
@@ -56,11 +57,40 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       DB_PORT: ${DB_PORT}
+      SKALE_DIR_HOST: ${SKALE_DIR}
+    command: "python3 admin.py"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ${SKALE_DIR}:/skale_vol
+      - ${SKALE_DIR}/node_data:/skale_node_data
+    depends_on:
+      - mysql
+
+  skale-api:
+    <<: *skale_base
+    container_name: skale_api
+    image: "skale-admin:${TAG:-latest}"
+    build:
+      context: "{{ base_path }}/skale-admin"
+      dockerfile: Dockerfile
+    network_mode: host
+    tty: true
+    environment:
+      TM_URL: http://127.0.0.1:3008
+      SGX_SERVER_URL: ${SGX_SERVER_URL}
+      SGX_CERTIFICATES_DIR_NAME: ${SGX_CERTIFICATES_DIR_NAME}
+      ENDPOINT: ${ENDPOINT}
+      IMA_ENDPOINT: ${IMA_ENDPOINT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      DB_PORT: ${DB_PORT}
       FLASK_SECRET_KEY: ${FLASK_SECRET_KEY}
       FLASK_APP_PORT: 3007
       FLASK_APP_HOST: "127.0.0.1"
       FLASK_DEBUG_MODE: "False"
       SKALE_DIR_HOST: ${SKALE_DIR}
+    command: "python3 app.py"
     ports:
       - 3007:3007
     volumes:
@@ -69,6 +99,7 @@ services:
       - ${SKALE_DIR}/node_data:/skale_node_data
     depends_on:
       - mysql
+
   mysql:
     <<: *skale_base
     container_name: skale_mysql
