--- a/ansible/roles/sources/templates/docker-compose.yml.j2
+++ b/ansible/roles/sources/templates/docker-compose.yml.j2
@@ -125,13 +125,16 @@ services:
   redis:
     <<: *skale_base
     container_name: redis
-    image: "redis:alpine"
+    image: "redis:6.0-alpine"
     network_mode: host
     tty: true
     environment:
      - REDIS_REPLICATION_MODE=master
+    command: "redis-server /config/redis.conf"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ${SKALE_DIR}/node_data/redis-data:/data/db:rw
+      - ${SKALE_DIR}/config:/config:ro
 
   mysql:
     <<: *skale_base
