--- a/skale-nodes/ansible/roles/sources/templates/docker-compose.yml.j2
+++ b/skale-nodes/ansible/roles/sources/templates/docker-compose.yml.j2
@@ -68,6 +68,7 @@ services:
       DEFAULT_GAS_PRICE_WEI: ${DEFAULT_GAS_PRICE_WEI}
       MAX_ALLOWED_LOG_TIME_DIFF: 600
       DISABLE_IMA: ${DISABLE_IMA}
+      ENV_TYPE: ${ENV_TYPE}
     command: "python3 admin.py"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -114,6 +115,7 @@ services:
       DISABLE_DRY_RUN: ${DISABLE_DRY_RUN}
       DEFAULT_GAS_LIMIT: ${DEFAULT_GAS_LIMIT}
       DEFAULT_GAS_PRICE_WEI: ${DEFAULT_GAS_PRICE_WEI}
+      ENV_TYPE: ${ENV_TYPE}
     command: "gunicorn app:app -c gunicorn.conf.py"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
